Adjusting chat header spacing

--- a/amadeus/static/css/base/amadeus.css
+++ b/amadeus/static/css/base/amadeus.css
@@ -1417,6 +1417,9 @@ h5.one span {
 
 .modal_profile_sidebar {
   text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 .modal_profile_sidebar h4 {
   font-size: 16px;
@@ -1425,6 +1428,13 @@ h5.one span {
 .talk_header {
   padding-top: 5px !important;
   padding-left: 10px !important;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+.modal-header.talk_header::before,
+.modal-header.talk_header::after {
+  content: none;
 }
 .talk_header .close {
   padding-top: 17px !important;
