Inserção de tabela 'Log_Consultas' e alterações de consultas arquivo xml

--- a/dashboards/templates/dashboards/manager/_users_graph.html
+++ b/dashboards/templates/dashboards/manager/_users_graph.html
@@ -109,7 +109,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             {% endcomment %}
         </div>
         <div id="XlsDownload">
-            <button type="button" class="btn btn-outline-success">
+            <button type="button" class="btn btn-outline-success xlsDownload">
                 <p>
                     <a href="{% url 'dashboards:xlsusers' %}" style="text-decoration:none">
                         <i class="fa fa-download" aria-hidden="true"></i>
