--- a/questionary/templates/questionary/window_view.html
+++ b/questionary/templates/questionary/window_view.html
@@ -71,7 +71,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 {% csrf_token %}
                 <select name="selected_student" onchange="$('#student_quest').submit();">
                     {% for stu in sub_students %}
-                        <option value="{{ stu.email }}" {% if stu.email == student %}selected{% endif %}>{{ stu }}</option>
+                        <option value="{{ stu.email }}" {% if stu.email == student %}selected{% endif %}>{{ stu.fullname }}</option>
                     {% endfor %}
                 </select>
             </form>
