--- a/dashboards/templates/dashboards/manager/_users_bubble.html
+++ b/dashboards/templates/dashboards/manager/_users_bubble.html
@@ -12,111 +12,134 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% load static i18n %}
 
 <div class="row">
-    <div class="col-md-12 bubble_users" data-url="{% url 'dashboards:general_bubble_chart' %}">
-        <div class="header">
-            <div class="identifier">
-                <b>
-                    {% trans 'Users that interacts the most' %}
-                    <i class="fa fa-info-circle" aria-hidden="true" data-toggle="tooltip" title="{% trans 'Compares the the interactions number realized by system users' %}"></i>
-                </b>
-            </div>
-            <div class="selector">
-                <span>{% trans 'Cloudy' %}</span>
-                <label class="switch">
-                    <input id="ganttPercent" type="checkbox" name="percentOn" checked onclick="view_toggle($(this))" />
-                    <span class="slider round"></span>
-                </label>
-            </div>
-        </div>
-        <div class="info">
-            <div class="info_icon">
-                <i class="fa fa-smile-o"></i>
-                <i class="fa fa-arrows-v"></i>
-            </div>
-            <p class="text-cloudy-legend">{% trans 'Users interactions' %}</p>
-        </div>
-        <form method="post" id="form-radio-bubble_users" name="form-bubble">
-            <div class="radio-bubble_users">    
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="1">
-                    <label class="form-check-label" for="inlineRadioBubble1">Estudantes</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="2">
-                    <label class="form-check-label" for="inlineRadioBubble2">Professores</label>
-                </div>
-                <div class="form-check form-check-inline">
-                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="0" checked>
-                    <label class="form-check-label" for="inlineRadioBubble3">Geral</label>
-                </div>
-                
-            </div>
-        </form>
-        <div class="users_cloud">
-            
-        </div>
-        <div class="users_table" id="users_table_bubble">
-
-            <div id="table-container" class="table-responsive">
-                <table id="students_table" class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th class="sort" scope="col" data-sort="name">
-                                {% trans 'Users' %}
-                                <i class="fa fa-sort"></i>
-                            </th>
-                            <th class="sort" scope="col" data-sort="access">
-                                {% trans 'Interactions' %}
-                                <i class="fa fa-sort"></i>
-                            </th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                    </tbody>
-                </table>
-            </div>
-            <nav aria-label="Table Navigation">
-                <ul id="students_pag" class="pagination"></ul>
-            </nav>
-        </div>
-
-        <div id="popovers">
-            <div class="popover">
-                <div class="popover-content participant">
-                    <button type="button" class="close" aria-label="{% trans 'Close' %}">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-
-                    <br clear="all" />
-
-                    <div class="col-md-3 col-sm-3 col-xs-3 user-img">
-                        <img id="user_img" src="" class="img-responsive" />
-                    </div>
-                    <div class="col-md-9 col-sm-9 col-xs-9 user-info">
-                        <h4>
-                            <a class="status" data-toggle="tooltip" title=""></a>
-                            <span id="username"></span>
-                        </h4>
-                    </div>
-                </div>
-                <div class="popover-footer">
-                    <a id="profileLink"
-                    onclick="getModalInfo($(this), '0', 'general'); return false;"
-                    class="btn btn-default btn-raised pull-left btn-popover-mobile"
-                    >
-                        {% trans 'See Profile' %}
-                    </a>
-                    <a id="chatLink"
-                    onclick="getModalInfo($(this), '0', 'general'); return false;"
-                    class="btn btn-success btn-raised pull-right btn-popover-mobile"
-                    >
-                        {% trans 'Send Message' %}
-                    </a>
-                </div>
-            </div>
-        </div>
+  <div class="col-md-12 bubble_users" data-url="{% url 'dashboards:general_bubble_chart' %}">
+    <div class="header">
+      <div class="identifier">
+        <b>
+          {% trans 'Users that interacts the most' %}
+          <i
+            class="fa fa-info-circle"
+            aria-hidden="true"
+            data-toggle="tooltip"
+            title="{% trans 'Compares the the interactions number realized by system users' %}"
+          ></i>
+        </b>
+      </div>
+      <div class="selector">
+        <span>{% trans 'Cloudy' %}</span>
+        <label class="switch">
+          <input id="ganttPercent" type="checkbox" name="percentOn" checked onclick="view_toggle($(this))" />
+          <span class="slider round"></span>
+        </label>
+      </div>
     </div>
+    <div class="info">
+      <div class="info_icon">
+        <i class="fa fa-smile-o"></i>
+        <i class="fa fa-arrows-v"></i>
+      </div>
+      <p class="text-cloudy-legend">{% trans 'Users interactions' %}</p>
+    </div>
+    <form method="post" id="form-radio-bubble_users" name="form-bubble">
+      <div class="radio-bubble_users">
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            name="inlineRadioOptions"
+            id="inlineRadio1"
+            value="2"
+            checked
+          />
+          <label class="form-check-label" for="inlineRadioBubble1">Estudantes</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            name="inlineRadioOptions"
+            id="inlineRadio2"
+            value="0"
+            checked
+          />
+          <label class="form-check-label" for="inlineRadioBubble2">Professores</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            name="inlineRadioOptions"
+            id="inlineRadio3"
+            value="1"
+            checked
+          />
+          <label class="form-check-label" for="inlineRadioBubble3">Cordenadores</label>
+        </div>
+      </div>
+    </form>
+    <div class="users_cloud"></div>
+    <div class="users_table" id="users_table_bubble">
+      <div id="table-container" class="table-responsive">
+        <table id="students_table" class="table table-hover">
+          <thead>
+            <tr>
+              <th scope="col">#</th>
+              <th class="sort" scope="col" data-sort="name">
+                {% trans 'Users' %}
+                <i class="fa fa-sort"></i>
+              </th>
+              <th class="sort" scope="col" data-sort="access">
+                {% trans 'Interactions' %}
+                <i class="fa fa-sort"></i>
+              </th>
+            </tr>
+          </thead>
+          <tbody></tbody>
+        </table>
+      </div>
+      <nav aria-label="Table Navigation">
+        <ul id="students_pag" class="pagination"></ul>
+      </nav>
+    </div>
+
+    <div id="popovers">
+      <div class="popover">
+        <div class="popover-content participant">
+          <button type="button" class="close" aria-label="{% trans 'Close' %}">
+            <span aria-hidden="true">&times;</span>
+          </button>
+
+          <br clear="all" />
+
+          <div class="col-md-3 col-sm-3 col-xs-3 user-img">
+            <img id="user_img" src="" class="img-responsive" />
+          </div>
+          <div class="col-md-9 col-sm-9 col-xs-9 user-info">
+            <h4>
+              <a class="status" data-toggle="tooltip" title=""></a>
+              <span id="username"></span>
+            </h4>
+          </div>
+        </div>
+        <div class="popover-footer">
+          <a
+            id="profileLink"
+            onclick="getModalInfo($(this), '0', 'general'); return false;"
+            class="btn btn-default btn-raised pull-left btn-popover-mobile"
+          >
+            {% trans 'See Profile' %}
+          </a>
+          <a
+            id="chatLink"
+            onclick="getModalInfo($(this), '0', 'general'); return false;"
+            class="btn btn-success btn-raised pull-right btn-popover-mobile"
+          >
+            {% trans 'Send Message' %}
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="modal fade" id="chat-modal-info" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"></div>
