Changing dashboards graph

--- a/dashboards/templates/dashboards/manager/_logs_graph.html
+++ b/dashboards/templates/dashboards/manager/_logs_graph.html
@@ -36,4 +36,5 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
   </div>
 </div>
 
+<script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
 <script type="text/javascript" src="{% static 'dashboards/js/manager/logschart.js' %}"></script>
