--- a/dashboards/templates/dashboards/manager/_users_graph.html
+++ b/dashboards/templates/dashboards/manager/_users_graph.html
@@ -111,7 +111,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         <div id="XlsDownload">
             <button type="button" class="btn btn-outline-success xlsDownload">
                 <p>
-                    <a href="{% url 'dashboards:xlsusers' %}" style="text-decoration:none">
+                    <a onclick="$('#period').submit();" style="text-decoration:none">
                         <i class="fa fa-download" aria-hidden="true"></i>
                     
                         Download de Arquivo .xls
