Adjusting see profile btn in users list

--- a/users/templates/users/list.html
+++ b/users/templates/users/list.html
@@ -75,7 +75,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                     <div class="col-md-3">
                         <div class="row">
                             <a href="#" onclick="getModalInfo($(this), '0', 'general'); return false;" data-url='{% url "chat:profile" acc.email %}'
-                                class="btn btn-info btn-raised btn-sm btn-block">
+                                class="btn btn-default btn-raised btn-sm btn-block">
                                 {% trans 'See Profile' %}
                             </a>
                         </div>
